--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 	<!-- Bootstrap -->
 	<link href="demo/css/bootstrap.min.css" rel="stylesheet">
+	<link href="demo/css/prism.css" rel="stylesheet">
 
 
 	<link href="demo/css/demo.css" rel="stylesheet">
@@ -17,8 +18,8 @@
 <body>
 
 
-	<div class="container">
-		<div class="conduit-canvas" data-cache="session"></div>
+	<div class="container language-javascript">
+		<div class="conduit-canvas" data-cache="local"></div>
 	</div>
 
 
@@ -30,24 +31,31 @@
 					<h1>Todo</h1>
 					<input id="new-task" data-event="change" type="text" class="form-control add-todo conduit" data-add-node="task" data-node-default="title" placeholder="Add todo" autocomplete="off">
 					<hr>
-					<button type="button" class="btn btn-primary" data-add-node="option">Add Option</button>
 					<ul id="sortable" class="list-unstyled">
-						
+
 						{{#each task}}
 							{{#unless complete}}
 							<li class="ui-state-default">
-								
 								<div class="checkbox">
 									{{#unless edit}}
 										<label>
-											<input type="checkbox" name="{{:name}}[complete]" data-live-sync="true" value="1" {{#if complete}}checked="checked"{{/if}} {{#if edit}}disabled="disabled"{{/if}} /> {{#unless edit}}{{$ title}}{{/unless}}
+											<input type="checkbox" name="{{:name}}[complete]" data-live-sync="true" value="1" {{#if complete}}checked="checked"{{/if}} {{#if edit}}disabled="disabled"{{/if}} />
+											{{#unless edit}}{{$ title}}{{/unless}}
 										</label>
 										<button class="btn btn-default btn-xs pull-right" type="button" data-temp-node="{{@contextPath}}.edit true">Edit</button>
+										<button style="margin-right:5px;" class="btn btn-default btn-xs pull-right" type="button" data-add-node="{{@contextPath}}.subtask">Add Subtask</button>
 									{{else}}
 										<input class="form-control" type="text" name="{{:name}}[title]" value="{{title}}" data-auto-focus="true" data-live-sync="true">
 									{{/unless}}
 
 								</div>
+								{{#if subtask}}
+									<ul class="list-unstyled">
+									{{#each subtask}}
+										<li style="clear:both;"><input data-live-sync="true" name="{{:name}}[name]" value="{{name}}"> <button class="btn btn-default btn-xs pull-right" type="button" data-remove-node="{{@contextPath}}"><span class="glyphicon glyphicon-remove"></span></button></li>
+									{{/each}}
+									<ul>
+								{{/if}}
 							</li>
 							{{/unless}}
 						{{/each}}
@@ -56,31 +64,41 @@
 			</div>
 			<div class="col-md-6">
 				<div class="todolist">
-					<h1>Already Done</h1>
+					<h1>All Tasks</h1>
 					<ul id="done-items" class="list-unstyled">
 						{{#each task}}
-							{{#if complete}}
-							<li><input type="checkbox" name="{{:name}}[complete]" data-live-sync="true" value="1" {{#if complete}}checked="checked"{{/if}} /> {{$ title}}
-							<button class="remove-item btn btn-default btn-xs pull-right" data-remove-node="{{@contextPath}}"><span class="glyphicon glyphicon-remove"></span></button></li>
+							<li><input type="checkbox" name="{{:name}}[complete]" data-live-sync="true" value="1" {{#if complete}}checked="checked"{{/if}} /> {{$ title}}  {{#if more}}({{$ more}}){{/if}}
+							{{#if complete}}							
+							<button class="remove-item btn btn-default btn-xs pull-right" data-remove-node="{{@contextPath}}"><span class="glyphicon glyphicon-remove"></span></button>
 							{{/if}}
+							{{json subtask}}
+							</li>
 						{{/each}}
 					</ul>
 				</div>
 			</div>
 		</div>
-		{{count option}}
-		{{#each option}}			
-			<div style="clear:both;margin:5px 0;">{{@contextPath}} - {{@key}} <button type="button" class="btn btn-danger btn-xs pull-right" data-remove-node="{{@contextPath}}">Remove</button></div>
-			
-		{{/each}}
+
+		<hr>
+		<div class="row">
+			<div class="col-md-6">
+				Object
+				<pre><code class="language-javascript" id="highlight-object">var conduit = {{json this}};</code></pre>
+			</div>
+		</div>
+
+		{{#script}}
+			Prism.highlightElement( document.getElementById( "highlight-object" ) );
+		{{/script}}
 	</script>
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="demo/js/bootstrap.min.js"></script>
+	<script src="demo/js/prism.js"></script>
 
-	<script src="caldera-conduit.min.js"></script>
+	<script src="src/caldera-conduit.js"></script>
 
 
 
